# timara-gearmap

./: admin_panel.py  app.py  checkout_system.py  config.ini  config.py  database.py  depot.db  omeka.py  pyproject.toml
templates/: admin.html  gear.html  reserve.html
